--- a/app/templates/app/home.hbs
+++ b/app/templates/app/home.hbs
@@ -11,6 +11,13 @@
 
 
 <div class="landing-content">
+    <div class="landing-logo">Trailer</div> 
+    <div class="center-video">
+        <video width="100%" controls>
+            <source src="assets/videos/RemTrailer.mp4">
+            Your Browser does not support video tag :<
+        </video>
+    </div>
 
     <div class="landing-logo">Off Brand Hell Games</div> 
     <div class="landing-logo-subhead">A devilishly atypical game studio</div>
