Some quick fixes zak wanted

--- a/app/templates/app/home.hbs
+++ b/app/templates/app/home.hbs
@@ -24,7 +24,7 @@
 
     <div class="landing-text">As a troupe of nineteen game designers and developers at Drexel University, we, <b>Off Brand Hell Games</b>, are on a mission to create video games that invite excitement and wonder.</div>
 
-    <div class="landing-text">Our first game under development is <b>Rem</b>. You play as a young girl trapped in a comatose dreamscape. In this puzzling adventure, you must explore the hospital she fell asleep in, avoid nightmarish enemies, and collect mementos of her past. Will you be able to escape this coma? </div>
+    <div class="landing-text">Our first game under development is <b>Remembrance</b>. You play as a young girl trapped in a comatose dreamscape. In this puzzling adventure, you must explore the hospital she fell asleep in, avoid nightmarish enemies, and collect mementos of her past. Will you be able to escape this coma? </div>
 
 
 </div>
