--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -37,7 +37,11 @@
 
     <br>
 
+
     <div class="play-subtitle">The Overview</div>
+    <div class="landing-text">  Remembrance is a game of stealth, endurance, and exploration. You play as a young girl named Rem who is trapped in her dreams due to a horrible accident. It is up to Rem to explore her mind, avoid nightmares, and reclaim her memories. </div>
+    
+    {{!-- <div class="play-subtitle">The Overview</div>
 
     <div class="landing-text"> <b>Rem</b> is a treacherous flight through the strange dreamworld of a coma patient named Rem. As Rem, you must hide, look, and travel through walls as well as use your cunning to mislead and outsmart your pursuers to retrieve mementos containing your lost memories in hopes of gaining consciousness.</div>
 
@@ -52,7 +56,7 @@
 
     
     <div class="play-subtitle">The Goal</div>
-    <div class="landing-text"> Your objective is to retrieve a memento and return it to your safe room. Along the way you must scout out for enemies, and strategically maneuver around them to get to the memento. Thankfully you are able to see through and travel through walls, making dodging a lot easier on the trip to the memento. However, on the trip back to the safe room, the memento can't travel through walls. This means Rem needs to not only maneuver around enemies, but lure and manipulate them into situations to make a clear path back to the safe room.</div>
+    <div class="landing-text"> Your objective is to retrieve a memento and return it to your safe room. Along the way you must scout out for enemies, and strategically maneuver around them to get to the memento. Thankfully you are able to see through and travel through walls, making dodging a lot easier on the trip to the memento. However, on the trip back to the safe room, the memento can't travel through walls. This means Rem needs to not only maneuver around enemies, but lure and manipulate them into situations to make a clear path back to the safe room.</div> --}}
 
 </div>
 
