Added logo and fixed typo

--- a/app/templates/app/documentation.hbs
+++ b/app/templates/app/documentation.hbs
@@ -21,7 +21,7 @@
         {{/tabs.tab}}
 
         {{#tabs.tab value="sell"}}
-        <b>Sell Presenations</b>
+        <b>Sell Presentations</b>
         {{/tabs.tab}}
 
         
