--- a/app/templates/app/home.hbs
+++ b/app/templates/app/home.hbs
@@ -13,10 +13,7 @@
 <div class="landing-content">
     <div class="landing-logo">Trailer</div> 
     <div class="center-video">
-        <video width="100%" controls>
-            <source src="assets/videos/RemTrailer.mp4">
-            Your Browser does not support video tag :<
-        </video>
+       <iframe width="100%" height="400px" src="https://www.youtube.com/embed/CrDOiY8Tcic" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
     <div class="landing-logo">Off Brand Hell Games</div> 
