--- a/app/templates/app/documentation.hbs
+++ b/app/templates/app/documentation.hbs
@@ -42,7 +42,7 @@
                 <div class="mid-nav-section">Winter Term 2018</div>
                 {{#paper-button class=(if (eq selectedSell 'sell3w') 'tab-doc-button md-focused' 'tab-doc-button') primary=true onClick=(action "mutate" "selectedSell" "sell2w")}}
                             {{!--{{paper-icon "home" size=48}}--}}
-                            <b>Final-Quarter Sell</b>
+                            <b>Final Sell</b>
                 {{/paper-button}}
 
                 {{#paper-button class=(if (eq selectedSell 'sell2w') 'tab-doc-button md-focused' 'tab-doc-button') primary=true onClick=(action "mutate" "selectedSell" "sell2w")}}
