--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -857,7 +857,8 @@ iframe.game-iframe{
 
 
   .mid-nav-section{
+      color:white;
       text-align: center;
-      font-weight: bold;
+    //   font-weight: bold;
       background-color: rgb(192, 105, 100);
   }
