--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -227,7 +227,7 @@ body {
 }
 
 .profile-toolbar{
-    height: 150px;
+    height: 160px;
 }
 
 .dialog-size{
@@ -698,12 +698,17 @@ iframe.game-iframe{
 }
 
 .hero-image{
-    background-image:url("images/rememberence_logo_5.png");
+    background-image:url("images/RainBopz.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size:contain;
     width:100%;
     height: 80vh;
+}
+
+.hero-background{
+    background-color: rgb(181, 206, 207);
+    box-shadow:         inset 0 0 10px #000000;
 }
 
 .landing-button{
