--- a/app/templates/app/home.hbs
+++ b/app/templates/app/home.hbs
@@ -2,26 +2,27 @@
 
 {{!-- <img src="assets/images/rememberence_logo_5.png" class="fit-image"> --}}
 
-<div class="hero-image">
-    <div class="landing-button">
-        {{#paper-button raised=true class="play-button" href=(href-to "app.play") onClick=(route-action "selectRoute" "app.play")}}Play The Game{{/paper-button}}
+<div class="hero-background">
+    <div class="hero-image">
+        <div class="landing-button">
+            {{#paper-button raised=true class="play-button" href=(href-to "app.play") onClick=(route-action "selectRoute" "app.play")}}Play The Game{{/paper-button}}
+        </div>
     </div>
-
 </div>
 
 
 <div class="landing-content">
-    <div class="landing-logo">Trailer</div> 
-    <div class="center-video">
+    {{!-- <div class="landing-logo">Trailer</div>  --}}
+    {{!-- <div class="center-video">
        <iframe width="100%" height="400px" src="https://www.youtube.com/embed/CrDOiY8Tcic" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
+    </div> --}}
 
-    <div class="landing-logo">Off Brand Hell Games</div> 
-    <div class="landing-logo-subhead">A devilishly atypical game studio</div>
+    <div class="landing-logo">Spicy Dragons</div> 
+    <div class="landing-logo-subhead">A game studio that brings the flavor</div>
 
-    <div class="landing-text">As a troupe of nineteen game designers and developers at Drexel University, we, <b>Off Brand Hell Games</b>, are on a mission to create video games that invite excitement and wonder.</div>
+    {{!-- <div class="landing-text"></div> --}}
 
-    <div class="landing-text">Our first game under development is <b>Remembrance</b>. You play as a young girl trapped in a comatose dreamscape. In this puzzling adventure, you must explore the hospital she fell asleep in, avoid nightmarish enemies, and collect mementos of her past. Will you be able to escape this coma? </div>
+    <div class="landing-text">We, at <b>Spicy Dragons</b>, create games that challenge and aid people who have Parkinsons, Muscular Dystophy, among other muscle diseases and Disorders.</div>
 
 
 </div>
