--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -5,27 +5,18 @@
 
     <div class="layout-row flex">
         <div class="landing-button flex">
-            {{#paper-button raised=true class="play-button" href=(href-to "app.web")}}Launch Web Build{{/paper-button}}
-        </div>
-        <div class="landing-button flex">
             <a href="https://drive.google.com/open?id=19RPDqw7fL15oiVNgh4gscpiwI7XMumpi">            
                 {{#paper-button raised=true class="play-button"}}Download PC Build{{/paper-button}}
-            </a>
-        </div>
-    
-        <div class="landing-button flex">
-            <a href="https://drive.google.com/open?id=1GLFkKMyv6Wx70LIz_sTpEruGRn7dTzrj">
-                {{#paper-button raised=true class="play-button"}}Download Mac Build{{/paper-button}}
             </a>
         </div>
     </div>
 </div>
 
 
-<div class="landing-content">
+{{!-- <div class="landing-content"> --}}
 
     {{!-- <div class="play-title">Rem</div>  --}}
-    <div class="play-subtitle">TAKE OUR SURVEY!</div>
+    {{!-- <div class="play-subtitle">TAKE OUR SURVEY!</div>
 
     <div class="landing-text text-center">After you finish playing the game, please give your feedback. Click the Take Survey button!</div>
     <div class="layout-row flex layout-align-center">
@@ -35,11 +26,11 @@
         </a>
     </div>
 
-    <br>
+    <br> --}}
 
 
-    <div class="play-subtitle">The Overview</div>
-    <div class="landing-text">  Remembrance is a game of stealth, endurance, and exploration. You play as a young girl named Rem who is trapped in her dreams due to a horrible accident. It is up to Rem to explore her mind, avoid nightmares, and reclaim her memories. </div>
+    {{!-- <div class="play-subtitle">The Overview</div> --}}
+    {{!-- <div class="landing-text">  Remembrance is a game of stealth, endurance, and exploration. You play as a young girl named Rem who is trapped in her dreams due to a horrible accident. It is up to Rem to explore her mind, avoid nightmares, and reclaim her memories. </div> --}}
     
     {{!-- <div class="play-subtitle">The Overview</div>
 
@@ -58,7 +49,7 @@
     <div class="play-subtitle">The Goal</div>
     <div class="landing-text"> Your objective is to retrieve a memento and return it to your safe room. Along the way you must scout out for enemies, and strategically maneuver around them to get to the memento. Thankfully you are able to see through and travel through walls, making dodging a lot easier on the trip to the memento. However, on the trip back to the safe room, the memento can't travel through walls. This means Rem needs to not only maneuver around enemies, but lure and manipulate them into situations to make a clear path back to the safe room.</div> --}}
 
-</div>
+{{!-- </div> --}}
 
 
 {{!-- <iframe src="http://www.mwagar.com/REMemberance/" class="game-iframe" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="700px" width="700px"></iframe> --}}
